--- a/milestone12a.html
+++ b/milestone12a.html
@@ -1,7 +1,7 @@
-import React from 'react';
-
-import ReactDOM from 'react-dom/client';
-
+<html>
+<body>
+<p id="root"></p>
+<script>
 function Hello(props) {
 
   return <h1>Hello World!</h1>;
@@ -11,6 +11,9 @@ function Hello(props) {
 const root = ReactDOM.createRoot(document.getElementById("root"));
 
 root.render(<Hello />);
+</script>
+</body>
+</html>
 
 
 
