--- a/milestone12b.html
+++ b/milestone12b.html
@@ -1,6 +1,7 @@
-import React from 'react';
-
-import ReactDOM from 'react-dom/client';
+<html>
+<body>
+<p id="root"></p>
+<script>
 
 class Car extends React.Component {
 
@@ -13,3 +14,6 @@ class Car extends React.Component {
 }
 
 ReactDOM.render(<Car color="red"/>, document.getElementById('root'));
+</script>
+</body>
+</html>
